--- a/main.tex
+++ b/main.tex
@@ -48,12 +48,12 @@ Daniel Yu,~page~\thepage~of~2
 
 \makeatletter
 \renewcommand{\section}{\@startsection{section}{1}{0mm}{\z@}%
-                                {.2ex}%
-                                {.2ex}%x
+                               {-3.25ex\@plus -1ex \@minus -.2ex}%
+                               {-1.5ex \@plus .2ex}%
                                 {\color{myorange}\sffamily\small\bfseries}}
 \renewcommand{\subsection}{\@startsection{subsection}{1}{0mm}{\z@}%
-                                {.2ex}%
-                                {.2ex}%x
+                               {-3.25ex\@plus -1ex \@minus -.2ex}%
+                               {-1.5ex \@plus .2ex}%
                                 {\sffamily\bfseries}}
 
 
